replace .e-label with .e-tag

--- a/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/table-doc/table-doc.component.html
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <div><label class="e-label e-label--orange e-mb-16">Figma only</label></div>
+            <div><label class="e-tag e-tag--orange e-mb-16">Figma only</label></div>
             <div>
               Accordion is used when you need to have additional information to the row. An accordion is
               placed all the way to the right with the possibility to expand/collapse on the whole row. Keep
@@ -430,7 +430,7 @@
             </div>
           </div>
           <div class="e-accordion__content">
-            <div><label class="e-label e-label--orange e-mb-16">Figma only</label></div>
+            <div><label class="e-tag e-tag--orange e-mb-16">Figma only</label></div>
             <div>
               Sorting is another way to ease user's search process in tables. The sorting functionality can
               either be in a sorting dropdown outside of the table, or as a table sorting in the table header.
