--- a/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
+++ b/packages/web/src/app/doc-pages/other-pages/color-doc/color-doc.component.html
@@ -105,7 +105,7 @@
                 "
               >
                 <div *ngFor="let label of item.labels; last as isLast">
-                  <span class="e-label" [ngClass]="!isLast ? 'e-mb-8' : ''">{{ label }}</span>
+                  <span class="e-tag" [ngClass]="!isLast ? 'e-mb-8' : ''">{{ label }}</span>
                 </div>
               </div>
             </div>
@@ -199,7 +199,7 @@
                 "
               >
                 <div *ngFor="let label of item.labels; last as isLast">
-                  <span class="e-label" [ngClass]="!isLast ? 'e-mb-8' : ''">{{ label }}</span>
+                  <span class="e-tag" [ngClass]="!isLast ? 'e-mb-8' : ''">{{ label }}</span>
                 </div>
               </div>
             </div>
@@ -295,7 +295,7 @@
                 "
               >
                 <div *ngFor="let label of item.labels; last as isLast">
-                  <span class="e-label" [ngClass]="!isLast ? 'e-mb-8' : ''">{{ label }}</span>
+                  <span class="e-tag" [ngClass]="!isLast ? 'e-mb-8' : ''">{{ label }}</span>
                 </div>
               </div>
             </div>
@@ -389,7 +389,7 @@
                 "
               >
                 <div *ngFor="let label of item.labels; last as isLast">
-                  <span class="e-label" [ngClass]="!isLast ? 'e-mb-8' : ''">{{ label }}</span>
+                  <span class="e-tag" [ngClass]="!isLast ? 'e-mb-8' : ''">{{ label }}</span>
                 </div>
               </div>
             </div>
