--- a/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.html
@@ -17,7 +17,7 @@
           </div>
         </h1>
         <div *ngIf="figmaOnly">
-          <label class="e-label e-label--orange">Figma only</label>
+          <label class="e-tag e-tag--orange">Figma only</label>
         </div>
         <div *ngIf="!figmaOnly && lastUpdated" class="doc-page-heading__date e-text-micro-light">
           Last updated {{ lastUpdated }}
