--- a/packages/web/src/app/shared/component-documentation/component-structure/component-section/component-section.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-section/component-section.component.html
@@ -18,7 +18,7 @@
       <h2 class="e-title-md elvis-anchor-title e-mb-24" style="display: flex">
         {{ sectionTitle }}
         <span *ngIf="figmaOnly" class="e-ml-16">
-          <label class="e-label e-label--orange">Figma only</label>
+          <label class="e-tag e-tag--orange">Figma only</label>
         </span>
         <ng-content select="headerIcon"></ng-content>
       </h2>
