--- a/packages/web/src/app/shared/component-documentation/component-structure/component-subsubsection/component-subsubsection.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-subsubsection/component-subsubsection.component.html
@@ -4,7 +4,7 @@
   <h4 class="e-title-xs e-mt-0 e-mb-8" *ngIf="sectionTitle.length > 0">
     {{ sectionTitle }}
     <span *ngIf="figmaOnly" class="e-ml-16">
-      <label class="e-label e-label--orange">Figma only</label>
+      <label class="e-tag e-tag--orange">Figma only</label>
     </span>
   </h4>
   <div class="component-section__content e-text-lg">
