--- a/packages/web/src/app/shell/header/search-menu/search-menu.component.scss
+++ b/packages/web/src/app/shell/header/search-menu/search-menu.component.scss
@@ -242,7 +242,7 @@
           font-size: 18px;
           line-height: 22px;
         }
-        .e-label {
+        .e-tag {
           cursor: pointer;
         }
       }
