--- a/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-header/component-header.component.scss
@@ -26,7 +26,7 @@
           }
         }
         h1,
-        .e-label {
+        .e-tag {
           display: flex;
           align-self: center;
         }
