--- a/packages/web/src/app/shared/component-documentation/component-structure/component-subsection/component-subsection.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-structure/component-subsection/component-subsection.component.html
@@ -4,7 +4,7 @@
   <h3 class="e-title-sm e-mb-16 e-mt-0 component-section__header" *ngIf="sectionTitle.length > 0">
     <span>{{ sectionTitle }}</span>
     <span *ngIf="figmaOnly" class="e-ml-16 component-section__label">
-      <label class="e-label e-label--orange">Figma only</label>
+      <label class="e-tag e-tag--orange">Figma only</label>
     </span>
     <span *ngIf="sectionClass !== ''" class="e-ml-16 component-section__class">
       <app-copy [message]="sectionClass">
